--- a/Templates & Styles/.settings/org.eclipse.core.resources.prefs
+++ b/Templates & Styles/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//Templates/Blank-page.jrxml=UTF-8
 encoding//Templates/ReportCoverTemplate.jrxml=UTF-8
 encoding//Templates/Standard-TOC-Page.jrxml=UTF-8
 encoding//Templates/Welcome.jrxml=UTF-8
