project management summary initial version

--- a/FirstProject/.gitignore
+++ b/FirstProject/.gitignore
@@ -4,3 +4,7 @@
 /test-book_backcover.jasper
 /test-book_cover.jasper
 /test-book_toc.jasper
+/Abstract_Book.jasper
+/Abstract_Book_cover.jasper
+/Abstract_Book_backcover.jasper
+/Abstract_Book_toc.jasper
