--- a/MSR/.gitignore
+++ b/MSR/.gitignore
@@ -3,3 +3,8 @@
 /MSR-Book_backcover.jasper
 /MSR-Book_cover.jasper
 /MSR-Book_toc.jasper
+/MSR-Introduction.jasper
+/MSR-2-Management-Summary.jasper
+/Abstract_Book.jasper
+/Abstract_Book_toc.jasper
+/Blank_A4.jasper
