--- a/MSR/.settings/org.eclipse.core.resources.prefs
+++ b/MSR/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
+encoding/MSR-2-Management-Summary.jrxml=UTF-8
 encoding/MSR-Book.jrxml=UTF-8
+encoding/MSR-Introduction.jrxml=UTF-8
