--- a/MSR/.gitignore
+++ b/MSR/.gitignore
@@ -8,3 +8,7 @@
 /Abstract_Book.jasper
 /Abstract_Book_toc.jasper
 /Blank_A4.jasper
+/Monthly-Security-Report-Book.jasper
+/Monthly-Security-Report-Book_cover.jasper
+/Monthly-Security-Report-Book_backcover.jasper
+/Monthly-Security-Report-Book_toc.jasper
