--- a/MSR/.settings/org.eclipse.core.resources.prefs
+++ b/MSR/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
 encoding/MSR-2-Management-Summary.jrxml=UTF-8
-encoding/MSR-Book.jrxml=UTF-8
 encoding/MSR-Introduction.jrxml=UTF-8
+encoding/Monthly-Security-Report-Book.jrxml=UTF-8
+encoding/Monthly-Security-Report-Book_toc.jrxml=UTF-8
