Windows users part book added

--- a/MSR/.gitignore
+++ b/MSR/.gitignore
@@ -12,3 +12,6 @@
 /Monthly-Security-Report-Book_cover.jasper
 /Monthly-Security-Report-Book_backcover.jasper
 /Monthly-Security-Report-Book_toc.jasper
+/MSR-6-Windows-Users.jasper
+/MSR-6-Unix-Users.jasper
+/MSR-7-Windows-Users.jasper
