--- a/MSR/.settings/org.eclipse.core.resources.prefs
+++ b/MSR/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,7 @@
 eclipse.preferences.version=1
 encoding/MSR-2-Management-Summary.jrxml=UTF-8
+encoding/MSR-6-Unix-Users.jrxml=UTF-8
+encoding/MSR-7-Windows-Users.jrxml=UTF-8
 encoding/MSR-Introduction.jrxml=UTF-8
 encoding/Monthly-Security-Report-Book.jrxml=UTF-8
 encoding/Monthly-Security-Report-Book_toc.jrxml=UTF-8
