added bookpart Critical and sensitive assets

--- a/MSR/.settings/org.eclipse.core.resources.prefs
+++ b/MSR/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,7 @@
 eclipse.preferences.version=1
 encoding/MSR-2-Management-Summary.jrxml=UTF-8
 encoding/MSR-2.1-Management-Summary.jrxml=UTF-8
+encoding/MSR-3-Critical-Sensitive.jrxml=UTF-8
 encoding/MSR-6-Unix-Users.jrxml=UTF-8
 encoding/MSR-6.2-DBA-Users.jrxml=UTF-8
 encoding/MSR-7-Windows-Users.jrxml=UTF-8
