--- a/MSR/.settings/org.eclipse.core.resources.prefs
+++ b/MSR/.settings/org.eclipse.core.resources.prefs
@@ -3,6 +3,7 @@ encoding/MSR-2-Management-Summary.jrxml=UTF-8
 encoding/MSR-2.1-Management-Summary.jrxml=UTF-8
 encoding/MSR-3-Critical-Sensitive.jrxml=UTF-8
 encoding/MSR-4.1-Sentinel-BU.jrxml=UTF-8
+encoding/MSR-5-Secure-Folders.jrxml=UTF-8
 encoding/MSR-6-Unix-Users.jrxml=UTF-8
 encoding/MSR-6.2-DBA-Users.jrxml=UTF-8
 encoding/MSR-7-Windows-Users.jrxml=UTF-8
