--- a/MSR/.settings/org.eclipse.core.resources.prefs
+++ b/MSR/.settings/org.eclipse.core.resources.prefs
@@ -2,6 +2,7 @@ eclipse.preferences.version=1
 encoding/MSR-2-Management-Summary.jrxml=UTF-8
 encoding/MSR-2.1-Management-Summary.jrxml=UTF-8
 encoding/MSR-3-Critical-Sensitive.jrxml=UTF-8
+encoding/MSR-4.0-Avaloq.jrxml=UTF-8
 encoding/MSR-4.1-Sentinel-BU.jrxml=UTF-8
 encoding/MSR-5-Secure-Folders.jrxml=UTF-8
 encoding/MSR-6-Unix-Users.jrxml=UTF-8
