reports repris assl

--- a/MSR/.gitignore
+++ b/MSR/.gitignore
@@ -1,22 +1,15 @@
-/MSR-Main.jasper
-/MSR-Book.jasper
-/MSR-Book_backcover.jasper
-/MSR-Book_cover.jasper
-/MSR-Book_toc.jasper
-/MSR-Introduction.jasper
 /MSR-2-Management-Summary.jasper
-/Abstract_Book.jasper
-/Abstract_Book_toc.jasper
-/Blank_A4.jasper
-/Monthly-Security-Report-Book.jasper
-/Monthly-Security-Report-Book_cover.jasper
-/Monthly-Security-Report-Book_backcover.jasper
-/Monthly-Security-Report-Book_toc.jasper
-/MSR-6-Windows-Users.jasper
-/MSR-6-Unix-Users.jasper
-/MSR-7-Windows-Users.jasper
-/MSR-6.2-DBA-Users.jasper
 /MSR-2.1-Management-Summary.jasper
-/MSR-4.1-Sentinel-BU.jasper
+/MSR-3-Critical-Sensitive.jasper
 /MSR-4.0-Avaloq.jasper
+/MSR-4.1-Sentinel-BU.jasper
 /MSR-5-Secure-Folders.jasper
+/MSR-6-Unix-Users.jasper
+/MSR-6.2-DBA-Users.jasper
+/MSR-7-Windows-Users.jasper
+/MSR-Introduction.jasper
+/Monthly-Security-Report-Book.jasper
+/Monthly-Security-Report-Book_toc.jasper
+/ReportCoverTemplate.jasper
+/bin/
+/Welcome.jasper
