--- a/MSR/.settings/org.eclipse.core.resources.prefs
+++ b/MSR/.settings/org.eclipse.core.resources.prefs
@@ -11,3 +11,5 @@ encoding/MSR-7-Windows-Users.jrxml=UTF-8
 encoding/MSR-Introduction.jrxml=UTF-8
 encoding/Monthly-Security-Report-Book.jrxml=UTF-8
 encoding/Monthly-Security-Report-Book_toc.jrxml=UTF-8
+encoding/ReportCoverTemplate.jrxml=UTF-8
+encoding/Welcome.jrxml=UTF-8
