Added subreport 2.2 Windows users graph + mmodified 2.0 Management summary as requested + modified Cricital and sensitive accesses as requested

--- a/MSR/.settings/org.eclipse.core.resources.prefs
+++ b/MSR/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,7 @@
 eclipse.preferences.version=1
 encoding/MSR-2-Management-Summary.jrxml=UTF-8
 encoding/MSR-2.1-Management-Summary.jrxml=UTF-8
+encoding/MSR-2.2-Graph-Windows-Users.jrxml=UTF-8
 encoding/MSR-3-Critical-Sensitive.jrxml=UTF-8
 encoding/MSR-4.0-Avaloq.jrxml=UTF-8
 encoding/MSR-4.1-Sentinel-BU.jrxml=UTF-8
