Fixed bug of table of content displaying multiple times the "Table of content" title

--- a/MSR/.gitignore
+++ b/MSR/.gitignore
@@ -14,3 +14,8 @@
 /bin/
 /Welcome.jasper
 /MSR-2.2-Graph-Windows-Users.jasper
+/Abstract_Book_toc.jasper
+/Abstract_Book_1.jasper
+/Abstract_Book_1_backcover.jasper
+/Abstract_Book_1_cover.jasper
+/Abstract_Book_1_toc.jasper
