Added Security Incidents and corrected various bugs on Windows Graph in management summary (graph title, print when nb win users > 0)

--- a/MSR/.settings/org.eclipse.core.resources.prefs
+++ b/MSR/.settings/org.eclipse.core.resources.prefs
@@ -9,6 +9,7 @@ encoding/MSR-5-Secure-Folders.jrxml=UTF-8
 encoding/MSR-6-Unix-Users.jrxml=UTF-8
 encoding/MSR-6.2-DBA-Users.jrxml=UTF-8
 encoding/MSR-7-Windows-Users.jrxml=UTF-8
+encoding/MSR-8-Security-Incidents.jrxml=UTF-8
 encoding/MSR-Introduction.jrxml=UTF-8
 encoding/Monthly-Security-Report-Book.jrxml=UTF-8
 encoding/Monthly-Security-Report-Book_toc.jrxml=UTF-8
