--- a/MSR/.gitignore
+++ b/MSR/.gitignore
@@ -20,3 +20,7 @@
 /Abstract_Book_1_cover.jasper
 /Abstract_Book_1_toc.jasper
 /MSR-8-Security-Incidents.jasper
+/MSR-10-Customer-Vulnerabilities.jasper
+/MSR-10-Vulnerabilities.jasper
+/MSR-10-Vulnerability_list.jasper
+/MSR-9-Qualys.jasper
