--- a/MSR/.settings/org.eclipse.core.resources.prefs
+++ b/MSR/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,7 @@
 eclipse.preferences.version=1
+encoding/MSR-10-Customer-Vulnerabilities.jrxml=UTF-8
+encoding/MSR-10-Vulnerabilities.jrxml=UTF-8
+encoding/MSR-10-Vulnerability_list.jrxml=UTF-8
 encoding/MSR-2-Management-Summary.jrxml=UTF-8
 encoding/MSR-2.1-Management-Summary.jrxml=UTF-8
 encoding/MSR-2.2-Graph-Windows-Users.jrxml=UTF-8
