--- a/FirstProject/.settings/org.eclipse.core.resources.prefs
+++ b/FirstProject/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,5 @@
 eclipse.preferences.version=1
+encoding/Blank_A4.jrxml=UTF-8
 encoding/Conditional_image.jrxml=UTF-8
+encoding/Vulnerabilities_list.jrxml=UTF-8
+encoding/crosstab.jrxml=UTF-8
