Qualys final version to deploy in ASSL

--- a/MSR/.gitignore
+++ b/MSR/.gitignore
@@ -24,3 +24,5 @@
 /MSR-10-Vulnerabilities.jasper
 /MSR-10-Vulnerability_list.jasper
 /MSR-9-Qualys.jasper
+/MSR-9.1-Qualys-Details.jasper
+/MSR-9.0-Qualys-Summary.jasper
