First par of modification until management summary first graph

--- a/MSR/.gitignore
+++ b/MSR/.gitignore
@@ -26,3 +26,5 @@
 /MSR-9-Qualys.jasper
 /MSR-9.1-Qualys-Details.jasper
 /MSR-9.0-Qualys-Summary.jasper
+/MSR-9-Qualys-Summary.jasper
+/MSR-10-TPAM.jasper
