Dynamic references for images and styles

--- a/FirstProject/.settings/org.eclipse.core.resources.prefs
+++ b/FirstProject/.settings/org.eclipse.core.resources.prefs
@@ -3,3 +3,4 @@ encoding/Blank_A4.jrxml=UTF-8
 encoding/Conditional_image.jrxml=UTF-8
 encoding/Vulnerabilities_list.jrxml=UTF-8
 encoding/crosstab.jrxml=UTF-8
+encoding/dynamic.jrxml=UTF-8
