--- a/Templates & Styles/.project
+++ b/Templates & Styles/.project
@@ -22,6 +22,11 @@
 	</natures>
 	<linkedResources>
 		<link>
+			<name>MSR-2.2-Graph-Windows-Users.jrxml</name>
+			<type>1</type>
+			<location>C:/Users/Gabriel/jasper/MSR/MSR-2.2-Graph-Windows-Users.jrxml</location>
+		</link>
+		<link>
 			<name>Qualys Summary.jrprint</name>
 			<type>1</type>
 			<location>C:/Temp/Qualys Summary.jrprint</location>
