fit width for all report.

--- a/FirstProject/.gitignore
+++ b/FirstProject/.gitignore
@@ -12,3 +12,8 @@
 /Blank_A4.jasper
 /Vulnerabilities_list.jasper
 /crosstab.jasper
+/Blank_A4_1.jasper
+/dynamic.jasper
+/dynamic_backcover.jasper
+/dynamic_cover.jasper
+/dynamic_toc.jasper
